# gnupg

./: configure.ac
g10/: Makefile.am  armor.c  call-dirmngr.h  compress-bz2.c  compress.c  parse-packet.c  plaintext.c  sig-check.c
m4/: iconv.m4
tests/: Makefile.am
tests/fuzz/: Makefile.am  fuzz_import.c
